--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
   "name": "decidim-rest_full",
+  "private": true,
+  "version": "0.0.1",
   "packageManager": "yarn@4.1.1",
   "devDependencies": {
+    "@openapitools/openapi-generator-cli": "^2.15.3",
+    "cz-emoji": "^1.3.2-canary.2",
     "prettier": "^3.3.3"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-emoji"
+    }
+  },
+  "scripts": {
+    "docs:start": "cd website && yarn start -p 3232",
+    "docs:compile_re_doc": "yarn gen:openapi-spec && npx @redocly/cli build-docs website/static/openapi.json -o website/static/api-docs.html",
+    "docs:build": "yarn docs:compile_re_doc && cd website && yarn build",
+    "gen:openapi-spec": "docker compose run -u root -w /home/decidim/module --rm rest_full bin/swaggerize",
+    "gen:node-client": "bin/gen-node-client",
+    "postversion": "bin/postversion"
   }
 }
