--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -13,10 +13,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Enable Corepack
+        run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 18
-          cache: yarn
+          node-version: 18.20
       - name: Install dependencies
         working-directory: website
         run: yarn install --frozen-lockfile
