--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -17,7 +17,7 @@ jobs:
         run: corepack enable
       - uses: actions/setup-node@v4
         with:
-          node-version: 18.20
+          node-version: latest
       - name: Install dependencies
         working-directory: website
         run: yarn install --frozen-lockfile
