--- a/website/package.json
+++ b/website/package.json
@@ -17,18 +17,18 @@
   "dependencies": {
     "@docusaurus/core": "^3.6.1",
     "@docusaurus/preset-classic": "^3.6.1",
-    "@mdx-js/react": "^3.0.0",
-    "clsx": "^2.0.0",
-    "prism-react-renderer": "^2.3.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "@mdx-js/react": "^3.1.0",
+    "clsx": "^2.1.1",
+    "prism-react-renderer": "^2.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "redocusaurus": "^2.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.6.1",
     "@docusaurus/tsconfig": "^3.6.1",
-    "@docusaurus/types": "3.5.2",
-    "typescript": "~5.5.2"
+    "@docusaurus/types": "3.6.1",
+    "typescript": "~5.5.4"
   },
   "browserslist": {
     "production": [
@@ -45,5 +45,5 @@
   "engines": {
     "node": ">=18.0"
   },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  "packageManager": "yarn@4.1.1"
 }
