--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -24,7 +24,7 @@ jobs:
 
       - name: Build website
         working-directory: website
-        run: yarn build
+        run: yarn build --dev
 
       - name: Upload Build Artifact
         uses: actions/upload-pages-artifact@v3
