--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ services:
     - if: '$CI_PIPELINE_SOURCE == "schedule"'
       when: never
     - if: '$CI_COMMIT_BRANCH == "main"'
-      when: always
+      when: manual
     - if: '$CI_COMMIT_TAG'
       when: always
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
@@ -144,5 +144,25 @@ ruby::rspec:
     - RAILS_ENV=development bundle install -j $(nproc)
     - bundle exec rake test_app
   script:
-    - RAILS_ENV=test bundle exec rspec spec/decidim
+    - RAILS_ENV=test bundle exec rspec spec/decidim/
+# Publish decidim rest full api package
 
+
+decidim-client::publish:
+  image: node:latest
+  before_script:
+    - cd contrib/decidim-node-client
+    - yarn install --frozen-lockfile --cache-folder .yarn
+    - |
+      {
+        echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/"
+        echo "${CI_API_V4_URL#https?}/projects/${CI_PROJECT_ID}/packages/npm/:_authToken=\${CI_JOB_TOKEN}"
+      } | tee -a .npmrc
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}
+    paths:
+      - .yarn/
+  script:
+    - yarn build
+    - yarn publish --non-interactive
+  extends: .publication_rules
