--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -143,7 +143,8 @@ decidim-client::publish:
   image: node:latest
   before_script:
     - cd contrib/decidim-node-client
-    - yarn install --frozen-lockfile --cache-folder .yarn
+    - corepack enable
+    - yarn
     - |
       {
         echo "@${CI_PROJECT_ROOT_NAMESPACE}:registry=${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/"
