--- a/contrib/decidim-node-client/package.json
+++ b/contrib/decidim-node-client/package.json
@@ -42,5 +42,8 @@
     "globals": "^15.12.0",
     "prettier": "^3.3.3",
     "typescript": "^5.6.3"
+  },
+  "dependencies": {
+    "axios": "1.7.7"
   }
 }
