--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -125,11 +125,12 @@ ruby::rspec:
     SIMPLECOV: 1
     CI: 1
   before_script:
-    - apt-get update -qq && apt-get install -y ca-certificates curl gnupg
+    - apt-get update -qq && apt-get install -y ca-certificates curl gnupg libpq-dev
+    - gem install pg
     - mkdir -p /etc/apt/keyrings
     - curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
     - echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
-    - apt-get update && apt-get install -y -qq nodejs
+    - apt-get update -qq && apt-get install -y -qq nodejs
     - npm install -g yarn --force
     - gem install bundler
     - bundle config set path 'vendor'
