fixup! :construction_worker: (decidim-client) Publish decidim client

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,5 +157,5 @@ decidim-client::publish:
       - .yarn/
   script:
     - yarn build
-    - yarn publish --non-interactive
+    - yarn npm publish --non-interactive
   extends: .publication_rules
