--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ stages:
   - translate
   - publish
 variables:
-  POSTGRES_DB: decidim_test
+  POSTGRES_DB: decidim_module_rest_full_test
   POSTGRES_USER: decidim
   POSTGRES_PASSWORD: "TEST-insecure_password"
 
@@ -125,23 +125,13 @@ ruby::rspec:
     SIMPLECOV: 1
     CI: 1
   before_script:
-    - apt-get update -qq && apt-get install -y ca-certificates curl gnupg libpq-dev
-    - gem install pg
-    - mkdir -p /etc/apt/keyrings
-    - curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg
-    - echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_$NODE_MAJOR.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list
-    - apt-get update -qq && apt-get install -y -qq nodejs
-    - npm install -g yarn --force
-    - gem install bundler
-    - bundle config set path 'vendor'
-    - RAILS_ENV=development bundle install -j $(nproc)
-    - bundle exec rake test_app
+    - bin/setup-tests
   script:
     - RAILS_ENV=test bundle exec rspec spec/decidim/
 
 # Publish decidim rest full api package
 decidim-client::publish:
-  image: node:latest
+  image: node:18.20
   before_script:
     - cd contrib/decidim-node-client
     - corepack enable
@@ -157,5 +147,5 @@ decidim-client::publish:
       - .yarn/
   script:
     - yarn build
-    - yarn npm publish --non-interactive
+    - yarn publish --non-interactive
   extends: .publication_rules
