:sparkles: (oauth) registration on impersonate with registration data: email,name
Add oauth parameters to be able to give data on registration. Handle a meta.email and meta.name field that will be used on registration

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "docs:build": "yarn docs:compile_re_doc && cd website && yarn build",
     "gen:openapi-spec": "docker compose run -u root -w /home/decidim/module --rm rest_full bin/swaggerize",
     "gen:node-client": "bin/gen-node-client",
+    "postcommit": "yarn docs:compile_re_doc && yarn gen:node-client",
     "postversion": "bin/postversion"
   }
 }
