--- a/contrib/decidim-node-client/.yarnrc.yml
+++ b/contrib/decidim-node-client/.yarnrc.yml
@@ -1,1 +1,5 @@
 nodeLinker: node-modules
+npmScopes:
+  octree:
+    npmRegistryServer: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/npm/"
+    npmAuthToken: "${NODE_AUTH_TOKEN}"
