feat: magic signin

--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,6 +1,6 @@
 services:
   rest_full:
-    command: bash -c "bin/setup-tests && bundle exec rspec spec/decidim/" 
+    command: bash -c "bin/setup-tests && bundle exec spec/models/ spec/requests/" 
     image: ruby:3.2.5
     entrypoint: ""
     volumes:
