--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "docs:build": "yarn docs:compile_re_doc && cd website && yarn build",
     "gen:openapi-spec": "docker compose run -u root -w /home/decidim/module --rm rest_full bin/swaggerize -o website/static/openapi.json",
     "gen:node-client": "bin/gen-node-client --validate --input website/static/openapi.json",
-    "format": "docker compose run -u root -w /home/decidim/module --rm rest_full bundle exec rubocop -A .",
+    "format:ruby": "docker compose run -u root -w /home/decidim/module --rm rest_full bundle exec rubocop -A .",
+    "format:erb": "docker compose run -u root -w /home/decidim/module --rm rest_full bundle exec erblint --lint-all --enable-all-linters --autocorrect",
+    "format": "yarn format:ruby && yarn format:erb",
     "postcommit": "yarn format && yarn gen:openapi-spec && yarn gen:node-client && yarn docs:compile_re_doc",
     "postversion": "bin/postversion && yarn postcommit"
   }
