--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,7 +130,7 @@ ruby::rspec:
   before_script:
     - bin/setup-tests
   script:
-    - DISABLE_SPRING=true RAILS_ENV=test bundle exec rspec spec/requests/ spec/models/ spec/jobs/ --format progress --format RspecJunitFormatter --out rspec.xml
+    - DISABLE_SPRING=true RAILS_ENV=test bundle exec rspec spec/commands/ spec/requests/ spec/models/ spec/jobs/ --format progress --format RspecJunitFormatter --out rspec.xml
   artifacts:
     when: always
     paths:
